<resources>
    <string name="app_name">CrazyTicTacToe</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="no_account_create_new">No account?Create New</string>
    <string name="appname">Crazy Tic Tac Toe</string>
    <string name="forgot_password">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="sing_up">Sing Up</string>
    <string name="recovety">Recovety</string>
    <string name="auth_screens_nav_graph">Auth Screens</string>
</resources>