<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.LoginFragment">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="322dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/appname"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/registrationPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/registrationEmail"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:autofillHints="emailAddress"
        android:background="@color/field_color"
        android:hint="@string/registration"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColorHint="@color/text_color_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registrationPassword"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:autofillHints="password"
        android:background="@color/field_color"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColorHint="@color/text_color_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />



    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="36dp"
        android:background="#0376BC"
        android:text="@string/sing_up"
        android:textColor="@color/button_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>